--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    repositories {
-        jcenter()
-        google()
-        maven { url 'https://maven.fabric.io/public' }
-    }
+  ext.kotlin_version = "1.2.30"
 
-    dependencies {
-        // The Fabric Gradle plugin uses an open ended version to react
-        // quickly to Android tooling updates
-        classpath 'com.android.tools.build:gradle:3.1.0'
-        classpath 'io.fabric.tools:gradle:1.+'
-        classpath 'com.google.gms:google-services:3.0.0'
-    }
+  repositories {
+    jcenter()
+    google()
+    maven { url 'https://maven.fabric.io/public' }
+  }
+
+  dependencies {
+    // The Fabric Gradle plugin uses an open ended version to react
+    // quickly to Android tooling updates
+    classpath 'com.android.tools.build:gradle:3.1.0'
+    classpath 'io.fabric.tools:gradle:1.+'
+    classpath 'com.google.gms:google-services:3.1.1'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
 }
 
 allprojects {
-    repositories {
-        jcenter()
-        google()
-        mavenCentral()
-    }
+  repositories {
+    jcenter()
+    google()
+    mavenCentral()
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
