--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,61 +1,62 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.2"
+  compileSdkVersion 27
+  buildToolsVersion '27.0.3'
 
-    defaultConfig {
-        applicationId "gurpreetsk.me.tinyeye"
-        minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+  defaultConfig {
+    applicationId "gurpreetsk.me.tinyeye"
+    multiDexEnabled true
+    minSdkVersion 15
+    targetSdkVersion 27
+    versionCode 1
+    versionName '1.0'
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 }
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
+  maven { url 'https://maven.fabric.io/public' }
+  mavenCentral()
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.google.api-client:google-api-client-android:1.20.0' exclude module: 'httpclient'
-    compile 'com.google.http-client:google-http-client-gson:1.20.0' exclude module: 'httpclient'
+  compile 'com.google.api-client:google-api-client-android:1.20.0' exclude module: 'httpclient'
+  compile 'com.google.http-client:google-http-client-gson:1.20.0' exclude module: 'httpclient'
 
+  compile 'com.android.support:appcompat-v7:27.0.2'
+  compile 'com.android.support:design:27.0.2'
+  compile 'com.google.apis:google-api-services-vision:v1-rev2-1.21.0'
+  compile 'com.android.support:support-v4:27.0.2'
+  compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+  compile 'com.google.android.gms:play-services-vision:9.8.0'
+  compile 'com.google.android.gms:play-services-maps:9.8.0'
+  compile 'com.android.support:cardview-v7:27.0.2'
+  compile 'com.android.volley:volley:1.0.0'
+  compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'com.github.paolorotolo:expandableheightlistview:1.0.0'
+  compile 'com.google.firebase:firebase-database:9.8.0'
+  compile 'com.rengwuxian.materialedittext:library:2.1.4'
+  compile 'org.jsoup:jsoup:1.10.1'
+  testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support:design:27.0.2'
-    compile 'com.google.apis:google-api-services-vision:v1-rev2-1.21.0'
-    compile 'com.android.support:support-v4:27.0.2'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'com.google.android.gms:play-services-vision:9.8.0'
-    compile 'com.google.android.gms:play-services-maps:9.8.0'
-    compile 'com.android.support:cardview-v7:27.0.2'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.paolorotolo:expandableheightlistview:1.0.0'
-    compile 'com.google.firebase:firebase-database:9.8.0'
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile 'org.jsoup:jsoup:1.10.1'
-    testCompile 'junit:junit:4.12'
+  compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+    transitive = true
+  }
 
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
-        transitive = true
-    }
-
-    compile 'com.google.firebase:firebase-database:9.8.0'
-    compile 'com.google.firebase:firebase-core:9.8.0'
-    compile 'com.google.firebase:firebase-crash:9.8.0'
-
-
+  compile 'com.google.firebase:firebase-database:9.8.0'
+  compile 'com.google.firebase:firebase-core:9.8.0'
+  compile 'com.google.firebase:firebase-crash:9.8.0'
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
