build.gradle, add a TODO.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ repositories {
   mavenCentral()
 }
 
+//TODO(gs) 8/Apr/18 - Extract into `ext` block.
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
 
