--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,35 +29,43 @@ repositories {
 
 //TODO(gs) 8/Apr/18 - Extract into `ext` block.
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
+  // Test dependencies
+  testImplementation 'junit:junit:4.12'
 
-  compile 'com.google.api-client:google-api-client-android:1.20.0' exclude module: 'httpclient'
-  compile 'com.google.http-client:google-http-client-gson:1.20.0' exclude module: 'httpclient'
+  // Jar/Aar(s)
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-  compile 'com.android.support:appcompat-v7:27.0.2'
-  compile 'com.android.support:design:27.0.2'
-  compile 'com.google.apis:google-api-services-vision:v1-rev2-1.21.0'
-  compile 'com.android.support:support-v4:27.0.2'
-  compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-  compile 'com.google.android.gms:play-services-vision:9.8.0'
-  compile 'com.google.android.gms:play-services-maps:9.8.0'
-  compile 'com.android.support:cardview-v7:27.0.2'
-  compile 'com.android.volley:volley:1.0.0'
-  compile 'com.squareup.picasso:picasso:2.5.2'
-  compile 'com.github.paolorotolo:expandableheightlistview:1.0.0'
-  compile 'com.google.firebase:firebase-database:9.8.0'
-  compile 'com.rengwuxian.materialedittext:library:2.1.4'
-  compile 'org.jsoup:jsoup:1.10.1'
-  testCompile 'junit:junit:4.12'
+  // Support
+  implementation 'com.android.support:appcompat-v7:27.0.2'
+  implementation 'com.android.support:design:27.0.2'
+  implementation 'com.android.support:support-v4:27.0.2'
+  implementation 'com.android.support:cardview-v7:27.0.2'
 
-  compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
-    transitive = true
-  }
+  // Firebase
+  implementation 'com.google.firebase:firebase-database:9.8.0'
+  implementation 'com.google.firebase:firebase-core:9.8.0'
+  implementation 'com.google.firebase:firebase-database:9.8.0'
+  implementation 'com.google.firebase:firebase-crash:9.8.0'
 
-  compile 'com.google.firebase:firebase-database:9.8.0'
-  compile 'com.google.firebase:firebase-core:9.8.0'
-  compile 'com.google.firebase:firebase-crash:9.8.0'
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  // Play
+  implementation 'com.google.apis:google-api-services-vision:v1-rev2-1.21.0'
+  implementation 'com.google.android.gms:play-services-appindexing:9.8.0'
+  implementation 'com.google.android.gms:play-services-vision:9.8.0'
+  implementation 'com.google.android.gms:play-services-maps:9.8.0'
+
+  // Volley :/
+  implementation 'com.android.volley:volley:1.0.0'
+
+  // Misc/UI
+  implementation 'com.google.api-client:google-api-client-android:1.20.0' exclude module: 'httpclient'
+  implementation 'com.google.http-client:google-http-client-gson:1.20.0' exclude module: 'httpclient'
+  implementation 'com.github.paolorotolo:expandableheightlistview:1.0.0'
+  implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+  implementation 'com.squareup.picasso:picasso:2.5.2'
+  implementation 'org.jsoup:jsoup:1.10.1'
+
+  // Kotlin
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
