--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'io.fabric'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
+apply plugin: "io.fabric"
+apply plugin: "kotlin-kapt"
 
 android {
   compileSdkVersion 27
-  buildToolsVersion '27.0.3'
+  buildToolsVersion "27.0.3"
 
   defaultConfig {
     applicationId "gurpreetsk.me.tinyeye"
@@ -12,60 +13,86 @@ android {
     minSdkVersion 15
     targetSdkVersion 27
     versionCode 1
-    versionName '1.0'
+    versionName "1.0"
   }
   buildTypes {
     release {
       minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
     }
   }
 }
 
+kapt {
+  generateStubs = true
+}
+
 repositories {
-  maven { url 'https://maven.fabric.io/public' }
+  maven { url "https://maven.fabric.io/public" }
   mavenCentral()
 }
 
 //TODO(gs) 8/Apr/18 - Extract into `ext` block.
 dependencies {
   // Test dependencies
-  testImplementation 'junit:junit:4.12'
+  testImplementation "junit:junit:4.12"
+  testImplementation "com.google.truth:truth:0.40"
 
   // Jar/Aar(s)
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation fileTree(dir: "libs", include: ["'*.jar'"])
 
   // Support
-  implementation 'com.android.support:appcompat-v7:27.0.2'
-  implementation 'com.android.support:design:27.0.2'
-  implementation 'com.android.support:support-v4:27.0.2'
-  implementation 'com.android.support:cardview-v7:27.0.2'
+  implementation "com.android.support:appcompat-v7:27.0.2"
+  implementation "com.android.support:design:27.0.2"
+  implementation "com.android.support:support-v4:27.0.2"
+  implementation "com.android.support:cardview-v7:27.0.2"
 
   // Firebase
-  implementation 'com.google.firebase:firebase-database:9.8.0'
-  implementation 'com.google.firebase:firebase-core:9.8.0'
-  implementation 'com.google.firebase:firebase-database:9.8.0'
-  implementation 'com.google.firebase:firebase-crash:9.8.0'
+  implementation "com.google.firebase:firebase-database:9.8.0"
+  implementation "com.google.firebase:firebase-core:9.8.0"
+  implementation "com.google.firebase:firebase-database:9.8.0"
+  implementation "com.google.firebase:firebase-crash:9.8.0"
 
   // Play
-  implementation 'com.google.apis:google-api-services-vision:v1-rev2-1.21.0'
-  implementation 'com.google.android.gms:play-services-appindexing:9.8.0'
-  implementation 'com.google.android.gms:play-services-vision:9.8.0'
-  implementation 'com.google.android.gms:play-services-maps:9.8.0'
+  implementation "com.google.apis:google-api-services-vision:v1-rev2-1.21.0"
+  implementation "com.google.android.gms:play-services-appindexing:9.8.0"
+  implementation "com.google.android.gms:play-services-vision:9.8.0"
+  implementation "com.google.android.gms:play-services-maps:9.8.0"
+
+  // Rx
+  implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
+  implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+  implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1"
+  implementation "com.jakewharton.rxbinding2:rxbinding:2.1.1"
+
+  // Square
+  implementation "com.squareup.okhttp3:okhttp:3.10.0"
+  implementation "com.squareup.retrofit2:retrofit:2.4.0"
+  implementation "com.squareup.moshi:moshi-kotlin:1.5.0"
+
+  // Dagger
+  implementation "com.google.dagger:dagger:2.14.1"
+  kapt "com.google.dagger:dagger-compiler:2.14.1"
+
+  // AutoValue
+  implementation "com.google.auto.value:auto-value-annotations:1.6"
+  kapt "com.google.auto.value:auto-value:1.6"
+  compileOnly 'com.ryanharter.auto.value:auto-value-moshi-annotations:0.4.5'
+  kapt 'com.ryanharter.auto.value:auto-value-moshi:0.4.5'
 
   // Volley :/
-  implementation 'com.android.volley:volley:1.0.0'
+  implementation "com.android.volley:volley:1.0.0"
 
   // Misc/UI
-  implementation 'com.google.api-client:google-api-client-android:1.20.0' exclude module: 'httpclient'
-  implementation 'com.google.http-client:google-http-client-gson:1.20.0' exclude module: 'httpclient'
-  implementation 'com.github.paolorotolo:expandableheightlistview:1.0.0'
-  implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-  implementation 'com.squareup.picasso:picasso:2.5.2'
-  implementation 'org.jsoup:jsoup:1.10.1'
+  implementation "com.google.api-client:google-api-client-android:1.20.0" exclude module: "httpclient"
+  implementation "com.google.http-client:google-http-client-gson:1.20.0" exclude module: "httpclient"
+  implementation "com.github.paolorotolo:expandableheightlistview:1.0.0"
+  implementation "com.rengwuxian.materialedittext:library:2.1.4"
+  implementation "com.squareup.picasso:picasso:2.5.2"
+  implementation "org.jsoup:jsoup:1.10.1"
 
   // Kotlin
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-apply plugin: 'com.google.gms.google-services'
+apply plugin: "com.google.gms.google-services"
