--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,9 @@ dependencies {
   // Rx
   implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
   implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
-  implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1"
-  implementation "com.jakewharton.rxbinding2:rxbinding:2.1.1"
+  implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1"
+  implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7-kotlin:2.1.1"
+  implementation 'com.jakewharton.rxbinding2:rxbinding-design-kotlin:2.1.1'
 
   // Square
   implementation "com.squareup.okhttp3:okhttp:3.10.0"
@@ -81,9 +82,15 @@ dependencies {
 
   // AutoValue
   implementation "com.google.auto.value:auto-value-annotations:1.6"
-  kapt "com.google.auto.value:auto-value:1.6"
   compileOnly 'com.ryanharter.auto.value:auto-value-moshi-annotations:0.4.5'
-  kapt 'com.ryanharter.auto.value:auto-value-moshi:0.4.5'
+  kapt "com.google.auto.value:auto-value:1.6"
+  kapt "com.ryanharter.auto.value:auto-value-moshi:0.4.5"
+
+  // Permission Dispatcher
+  implementation ("com.github.hotchemi:permissionsdispatcher:3.1.0") {
+    exclude module: "support-v13"
+  }
+  kapt "com.github.hotchemi:permissionsdispatcher-processor:3.1.0"
 
   // Volley :/
   implementation "com.android.volley:volley:1.0.0"
