--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
   implementation "com.android.support:design:27.0.2"
   implementation "com.android.support:support-v4:27.0.2"
   implementation "com.android.support:cardview-v7:27.0.2"
+  implementation "com.android.support.constraint:constraint-layout:1.0.2"
 
   // Firebase
   implementation "com.google.firebase:firebase-database:9.8.0"
