--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
   // Test dependencies
   testImplementation "junit:junit:4.12"
   testImplementation "com.google.truth:truth:0.40"
+  testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
 
   // Jar/Aar(s)
   implementation fileTree(dir: "libs", include: ["'*.jar'"])
