Gradle, add experimental android extensions.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ kapt {
   generateStubs = true
 }
 
+androidExtensions {
+  experimental = true
+}
+
 repositories {
   maven { url "https://maven.fabric.io/public" }
   mavenCentral()
