--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
   <application
     android:allowBackup="true"
+    android:name=".TinyApplication"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:screenOrientation="portrait"
